aks-learn-app/templates/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy-helm
  labels:
    app: web
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web
    spec: 
      terminationGracePeriodSeconds: 1
      containers:
      - name: hello-pod
        image: ravpawarakslearn.azurecr.io/aks-learn:v2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-secret

# Error: INSTALLATION FAILED: Unable to continue with install: Deployment "web-deploy" in namespace "default" exists and cannot be imported into the current release: invalid ownership metadata; label validation error: missing key "app.kubernetes.io/managed-by": must be set to "Helm"; annotation validation error: missing key "meta.helm.s
