aks-learn-app/templates/svc-clusterip.yml
# LoadBalancer Service. Will only work on supported cloud platforms (AKS, EKS, GKE, DOK, IBM, LKE etc...)
# Listens externally on 80 and forwards to Pod/container on 8080
apiVersion: v1
kind: Service
metadata:
  name: ps-clusterip-helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: web
